# codex

./: .bazelrc  .codespellignore  BUILD.bazel  MODULE.bazel  NOTICE  README.md  defs.bzl
.codex/environments/: environment.toml
.devcontainer/: Dockerfile.secure  devcontainer.secure.json
.github/scripts/: publish_r2_release.py  run-argument-comment-lint-bazel.sh  setup-macos-signing-secrets.sh
.github/workflows/: cargo-deny.yml  postmerge-ci.yml  python-runtime-build.yml  python-runtime-release.yml  r2-release.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rust-release-macos-arm64-signed.yml  rust-release-macos-arm64-unsigned.yml  rust-release-windows-x64-unsigned.yml  rust-release-windows.yml  rust-release.yml  rusty-v8-release.yml  v8-canary.yml
codex-rs/: Cargo.toml  deny.toml
codex-rs/agent-graph-store/: Cargo.toml
codex-rs/agent-graph-store/src/: local.rs
codex-rs/agent-identity/: Cargo.toml
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs  remote.rs
codex-rs/app-server-daemon/: Cargo.toml
codex-rs/app-server-daemon/src/: lib.rs  update_loop.rs  update_loop_tests.rs
codex-rs/app-server-protocol/src/: export.rs
codex-rs/app-server-protocol/tests/: schema_fixtures.rs
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: app_info.rs  app_server_tracing.rs  bespoke_event_handling.rs  code_mode_host.rs  code_mode_host_tests.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  effective_plugin_change.rs  extensions.rs  in_process.rs  lib.rs  main.rs  main_tests.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  request_processors.rs  thread_state.rs  thread_status.rs
codex-rs/apply-patch/src/: lib.rs
codex-rs/arg0/src/: lib.rs
codex-rs/backend-client/: Cargo.toml
codex-rs/backend-client/src/: client.rs  client_request_tests.rs  lib.rs  types.rs
codex-rs/backend-client/src/client/: rate_limit_resets.rs  rate_limit_resets_tests.rs
codex-rs/chatgpt/src/: connectors.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  doctor.rs  login.rs  main.rs  mcp_cmd.rs  plugin_cmd.rs  remote_control_cmd.rs  sandbox_setup.rs  state_db_recovery.rs
codex-rs/cli/tests/: debug_clear_memories.rs  login.rs  sandbox_network_proxy.rs
codex-rs/cloud-config/: Cargo.toml
codex-rs/cloud-config/src/: backend.rs  bundle_loader.rs  service_tests.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/cloud-tasks-client/src/: http.rs
codex-rs/cloud-tasks/src/: env_detect.rs  env_detect_tests.rs  lib.rs  util.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode-host/: Cargo.toml
codex-rs/code-mode-host/src/: host_tests.rs  lib.rs  main.rs  peer.rs  transport.rs  transport_tests.rs
codex-rs/code-mode-host/tests/: websocket.rs
codex-rs/code-mode/src/: lib.rs  remote_session.rs  remote_session_tests.rs  service.rs  service_tests.rs
codex-rs/code-mode/src/remote_session/: connection.rs
codex-rs/code-mode/src/remote_session/connection/: driver_tests.rs  reader.rs  transport.rs
codex-rs/code-mode/src/remote_session/connection/driver/: delegate_runtime.rs
codex-rs/code-mode/src/runtime/: value.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs  common.rs  lib.rs
codex-rs/codex-api/tests/: clients.rs
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: binding.rs  binding_clients.rs  binding_tests.rs  connection_manager.rs  connection_manager_tests.rs  elicitation.rs  lib.rs  resource_client.rs  rmcp_client.rs  runtime.rs  server.rs  tools.rs
codex-rs/config/src/: config_requirements.rs  config_toml.rs  diagnostics.rs  hook_config.rs  lib.rs  merge.rs  merge_tests.rs  schema.rs  shell_environment_policy.rs  shell_environment_policy_tests.rs  state.rs  state_tests.rs  thread_config.rs  tui_keymap.rs  types.rs
codex-rs/connectors/src/: app_info.rs  app_tool_policy_tests.rs  lib.rs  metadata_store.rs  (+1 more)
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-api/: Cargo.toml
codex-rs/core-plugins/: Cargo.toml
codex-rs/exec-server/: Cargo.toml  README.md
codex-rs/exec-server/tests/support/: BUILD.bazel  Cargo.toml  lib.rs
codex-rs/ext/git-attribution/: Cargo.toml
codex-rs/ext/git-attribution/src/: git_attribution_tests.rs  lib.rs  policy.rs  world_state.rs
codex-rs/http-client/: README.md
codex-rs/lmstudio/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/models-manager/: models.json
codex-rs/network-proxy/: Cargo.toml  README.md
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/scripts/: setup-windows.ps1
codex-rs/thread-store/: Cargo.toml
codex-rs/tools/: Cargo.toml
codex-rs/v8-poc/: BUILD.bazel
codex-rs/windows-sandbox-rs/: BUILD.bazel
codex-rs/windows-sandbox-rs/src/: acl.rs  deny_read_resolver.rs  elevated_impl.rs  identity.rs  lib.rs  proc_thread_attr.rs  process.rs  resolved_permissions.rs  setup.rs  token.rs  token_tests.rs  wrapper.rs  wrapper_tests.rs
codex-rs/windows-sandbox-rs/src/conpty/: mod.rs
codex-rs/windows-sandbox-rs/src/elevated/: ipc_framed.rs  runner_client.rs
codex-rs/windows-sandbox-rs/src/unified_exec/: mod.rs  tests.rs
codex-rs/windows-sandbox-rs/src/unified_exec/backends/: elevated.rs  elevated_tests.rs  legacy.rs
patches/: BUILD.bazel  llvm_rusty_v8_custom_libcxx.patch  ring_windows_msvc_include_dirs.patch  rules_rs_build_script_deps_annotation.patch  rules_rust_build_script_tools_transition.patch  rules_rust_windows_msvc_direct_link_args.patch  rules_rust_windows_process_wrapper_skip_temp_outputs.patch
scripts/install/: install.ps1  install.sh  test_install_sh.py
sdk/python/: _runtime_setup.py  release_version.py
tools/argument-comment-lint/: lint_aspect.bzl
(+948 files in other folders)
