exports_files([
    "abseil_windows_gnullvm_thread_identity.patch",
    "bzip2_windows_stack_args.patch",
    "llvm_rusty_v8_custom_libcxx.patch",
    "llvm_windows_arm64_powl.patch",
    "llvm_windows_mingw_compat.patch",
    "rules_rust_build_script_tools_transition.patch",
    "rules_rust_windows_msvc_direct_link_args.patch",
    "rules_rust_windows_process_wrapper_skip_temp_outputs.patch",
    "rules_cc_rusty_v8_custom_libcxx.patch",
    "rules_rs_build_script_deps_annotation.patch",
    "rusty_v8_prebuilt_out_dir.patch",
    "ring_windows_msvc_include_dirs.patch",
    "v8_bazel_rules.patch",
    "v8_module_deps.patch",
    "v8_source_portability.patch",
    "webrtc-sys_hermetic_darwin_sysroot.patch",
    "windows-link.patch",
    "xz_windows_stack_args.patch",
    "zstd-sys_windows_msvc_include_dirs.patch",
])
