[package]
name = "codex-code-mode-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-code-mode-host"
path = "src/main.rs"

[lib]
doctest = false
name = "codex_code_mode_host"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio", "ws"] }
clap = { workspace = true, features = ["derive"] }
codex-code-mode = { workspace = true }
codex-code-mode-protocol = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "net", "process", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
codex-protocol = { workspace = true }
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
