load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "windows-sandbox-rs",
    build_script_data = [
        "codex-windows-sandbox-setup.manifest",
    ],
    crate_name = "codex_windows_sandbox",
    test_data_extra = [
        ":codex-command-runner",
        ":codex-windows-sandbox-setup",
    ],
)
