[package]
edition.workspace = true
license.workspace = true
name = "codex-git-attribution"
version.workspace = true

[lib]
name = "codex_git_attribution"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-backend-client = { workspace = true }
codex-extension-api = { workspace = true }
codex-http-client = { workspace = true }
codex-login = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
codex-protocol = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
